--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <link rel="shortcut icon" href="images/favicon.png">
 
-    <link rel="preload" href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" as="style">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.deep_purple-pink.min.css">
     
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.js"></script>
