--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="twitter:site" content="지금 우리 학교는" />
     <meta property="twitter:title" content="지금 우리 학교는" />
     <meta property="twitter:description" content="지우학 시사회 코멘트 아카이브" />
-    <meta property="twitter:image" content="./images/dead.jfif" />
+    <meta property="twitter:image" content="./images/dead.jpg" />
     <meta property="twitter:url" content="https://jeongsj.github.io/AllOfUsAreDead/" />
 
     <!-- Add to homescreen for Chrome on Android -->
